add event-store into user-service + event-store schema for all service (#3)
* initial commit

* fix kafka native issue

* create event group in schema

* add NewUser domain

* add schemas for project service

* correct java package

* add schemas for issue service

* 1. add issue update schema
2. fix graal native image issue for kafka

* fix properties file

* fix port issue

* add version schemas for project service

* fix name of event & command

* add separate docker compose yml

* fix issue-service api exceptions

* add assign/unassign/watch/unwatch event

* spotlessApply

* 1.add file upload
2. rename request classes
3. Fix resolve API

* separate domain & integration event

* instead of publish integration domain on internal event bus , passing domain events on it and integration publisher subscribe that event and publish it

* remove generated files

* refactor

Co-authored-by: Raghav2211 <rghvj.22@gmail.com>